--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-music-player",
-  "version": "0.0.27",
+  "version": "0.0.28",
   "private": true,
   "$schema": "https://json.schemastore.org/package.json",
   "scripts": {
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.11.0",
+    "@prisma/extension-accelerate": "^2.0.2",
+    "@prisma/nuxt": "^0.3.0",
     "nuxt": "^3.17.5",
     "pinia": "^3.0.2",
     "spark-md5": "^3.0.2",
