--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-music-player",
-  "version": "0.0.29",
+  "version": "0.0.30",
   "private": true,
   "$schema": "https://json.schemastore.org/package.json",
   "scripts": {
@@ -13,14 +13,21 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier . --write",
     "prepare": "husky",
-    "precommit": "node ./.husky/scripts/updateVersion.js && git add package.json"
+    "precommit": "node ./.husky/scripts/updateVersion.js && git add package.json",
+    "prisma:generate": "pnpm prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:sync": "prisma:push && prisma:generate",
+    "prisma:pull": "prisma db pull",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.11.0",
+    "@prisma/client": "^6.16.2",
     "@prisma/extension-accelerate": "^2.0.2",
-    "@prisma/nuxt": "^0.3.0",
+    "axios": "^1.12.2",
     "nuxt": "^3.17.5",
     "pinia": "^3.0.2",
+    "prisma": "^6.16.2",
     "spark-md5": "^3.0.2",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1"
@@ -28,9 +35,9 @@
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
     "@nuxt/eslint": "^1.4.1",
+    "@types/axios": "^0.14.4",
     "@types/node": "^22.15.29",
     "@types/spark-md5": "^3.0.5",
-    "fetch-mock": "^12.5.2",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "sass": "^1.89.1"
