--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-music-player",
-  "version": "0.0.44",
+  "version": "0.0.45",
   "private": true,
   "$schema": "https://json.schemastore.org/package.json",
   "scripts": {
@@ -24,6 +24,7 @@
     "@pinia/nuxt": "^0.11.0",
     "@prisma/client": "^6.17.0",
     "@prisma/extension-accelerate": "^2.0.2",
+    "artplayer": "^5.3.0",
     "axios": "^1.12.2",
     "nuxt": "^3.17.5",
     "pinia": "^3.0.2",
