--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-music-player",
-  "version": "0.0.88",
+  "version": "0.0.89",
   "private": true,
   "$schema": "https://json.schemastore.org/package.json",
   "scripts": {
@@ -39,7 +39,10 @@
     "@types/axios": "^0.14.4",
     "@types/node": "^22.15.29",
     "@types/spark-md5": "^3.0.5",
+    "autoprefixer": "^10.4.21",
     "husky": "^9.1.7",
+    "postcss": "^8.5.6",
+    "postcss-preset-env": "^10.4.0",
     "prettier": "^3.5.3",
     "prisma": "^6.17.0",
     "sass": "^1.89.1"
